@@ -1,3 +1,7 @@
+2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
+	* tag V00-06-26
+	* moved again range cheking to enabling to make sure playback is detected
+
 2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-06-25
